Added post route with mongoose to the order partial

--- a/views/templates/navbar.pug
+++ b/views/templates/navbar.pug
@@ -8,3 +8,5 @@
           a(href='/about') About
         li(class=pageTitle === 'Contact' ? 'active' : '')
           a(href='/contact') Contact
+        li(class=pageTitle === 'Order' ? 'active' : '')
+          a(href='/order') Order
