Can now render topping from db

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,10 @@ body {
   background: orange;
 }
 
+button, label, input {
+  margin: auto .5rem;
+}
+
 
 /*********************************/
 /*  Navbar styles  */
