--- a/views/order.pug
+++ b/views/order.pug
@@ -35,9 +35,9 @@ block content
         label Toppings
       .form-group
         each topping in toppingList
-          label(for=topping.title) #{topping.title}
-          input#cheese(type='checkbox' name=topping.title value=topping.title)
-
+          .form-group
+            input#cheese(type='checkbox' name='toppings' value=topping.title)
+            | #{topping.title}
       .form-group
         button.btn Cancel
         button.btn Submit
