Can now catch schema error messages from incorrect post forms

--- a/views/order.pug
+++ b/views/order.pug
@@ -4,6 +4,9 @@ extends layout.pug
 //- This tag is needed for pug to plug the html in the layout
 block content
 
+  if msg
+    h1= msg
+
   .container
     form(method='POST').form-horizontal.contact-form
       .form-group
@@ -12,17 +15,17 @@ block content
       .form-group
         label(for='name') First Name
       .form-group
-        input#name(type='text' name='name' placeholder='Name')
+        input#name(type='text' name='name' placeholder='Name' required)
 
       .form-group
         label(for='email') Email
       .form-group
-        input#email(type='email' name='email' placeholder='Email')
+        input#email(type='email' name='email' placeholder='Email' required)
 
       .form-group
         label(for='phone') Phone
       .form-group
-        input#email(type='tel' name='phone' placeholder='Phone')
+        input#email(type='tel' name='phone' placeholder='Phone' required)
 
       .form-group
         label(for='size') Size
