Login and local session storage now working

--- a/views/login.pug
+++ b/views/login.pug
@@ -18,9 +18,9 @@ block content
         input#email(type='email' name='email' placeholder='Email')
 
       .form-group
-        label(for='message') Password
+        label(for='password') Password
       .form-group
-        input#message(type='password' name='message' placeholder='Password')
+        input#password(type='password' name='password' placeholder='Password')
 
       .form-group
         button.btn Cancel
