--- a/views/templates/navbar.pug
+++ b/views/templates/navbar.pug
@@ -10,3 +10,12 @@
           a(href='/contact') Contact
         li(class=pageTitle === 'Order' ? 'active' : '')
           a(href='/order') Order
+
+        if email
+          li Logged in as #{email}
+        else
+
+          li(class=pageTitle === 'Login' ? 'active' : '')
+            a(href='/login') Login
+          li(class=pageTitle === 'Register' ? 'active' : '')
+            a(href='/register') Register
