Logout logic is now working and user cannot access pages that require user info

--- a/views/templates/navbar.pug
+++ b/views/templates/navbar.pug
@@ -13,6 +13,8 @@
 
         if email
           li Logged in as #{email}
+          li(class=pageTitle === 'Logout' ? 'active' : '')
+            a(href='/logout') Logout
         else
 
           li(class=pageTitle === 'Login' ? 'active' : '')
